feat: ajoute de la route POST /api/posts
